--- a/seckill1/src/main/resources/static/goods_detail.htm
+++ b/seckill1/src/main/resources/static/goods_detail.htm
@@ -78,7 +78,7 @@
             },
             success: function(data) {
                 if (data.code == 0) {
-                    window.location.href =  "/order_detail.htm?orderId=" + data.data.id;
+                    getMiaoshaResult($("#goods-id").val());
                 } else {
                     layer.msg(data.msg);
                 }
@@ -86,7 +86,42 @@
             error: function() {
                 layer.msg("客户端请求错误");
             }
-        })
+        });
+    }
+
+    function getMiaoshaResult(goodsId) {
+        g_showLoading();
+        $.ajax({
+            url: "/miaosha/result",
+            type: "get",
+            data: {
+                goodsId: goodsId
+            },
+            success: function(data) {
+                if (data.code == 0) {
+                    var result = data.data;
+                    if (result < 0) {
+                        layer.msg("sorry, 秒杀失败");
+                    } else if (result == 0) { // 继续轮询
+                        setTimeout(function() {
+                            getMiaoshaResult(goodsId);
+                        }, 50);
+                    } else {
+                        layer.confirm("Congratulation, 秒杀成功! 查看订单?", {btn: ["确定", "取消"]},
+                        function() {
+                            window.location.href = "/order_detail.htm?orderId=" + result;
+                        }, function() {
+                            layer.closeAll();
+                        });
+                    }
+                } else {
+                    layer.msg(data.msg);
+                }
+            },
+            error: function() {
+                layer.msg("客户端请求错误");
+            }
+        });
     }
 
     function render(detail) {
