--- a/seckill1/src/main/resources/static/goods_detail.htm
+++ b/seckill1/src/main/resources/static/goods_detail.htm
@@ -44,8 +44,14 @@
             <td>
                 <form id="miaoshaForm" method="post" action="/miaosha/do_miaosha">
                     <!--<button class="btn btn-primary btn-block" type="submit" id="buyButton">立即秒杀</button>-->
-                    <button class="btn btn-primary btn-block" type="button" id="buyButton" onclick="getMiaoshaPath()">立即秒杀</button>
-                    <input type="hidden" id="goods-id" name="goodsId" value="goodsId">
+                    <div class="row">
+                        <div class="form-inline">
+                            <img id="verifyCodeImg" width="80" height="32" style="display:none;">
+                            <input type="text" id="verifyCode" class="form-control" style="display:none;">
+                            <button class="btn btn-primary btn-block" type="button" id="buyButton" onclick="getMiaoshaPath()">立即秒杀</button>
+                        </div>
+                    </div>
+                    <input type="hidden" class="btn btn-primary" id="goods-id" name="goodsId" value="goodsId">
                 </form>
             </td>
         </tr>
@@ -202,6 +208,9 @@
                 clearTimeout(timeout);
             }
             $("#miaosha-tip").html("秒杀进行中!")
+            $("#verifyCodeImg").attr("src", "/miaosha/verifyCode?goodsId=" + $("#goods-id").val());
+            $("#verifyCodeImg").show();
+            $("#verifyCode").show();
         } else {
             $("#buyButton").attr("disabled", true);
             $("#miaosha-tip").html("秒杀已结束!")
